components/WorksList/worklist.module.css
/* WorkList.module.css */

.workItem {
  position: relative;
  margin-bottom: 10px;
  display: inline-block;
  padding: 25px;
}

.preview {
  position: absolute;
  top: 75%;
  right: 35%;
  display: none;
}

.workItem:hover .preview {
  display: block;
}

.workItem:hover {
  background-color: var(--hover-color, pink);
}

.tags {
  display: flex;
  gap: 10px;
  margin-top: 20px;
  margin-left: 50px;
  justify-content: left;
  margin-bottom: 50px;
  flex-wrap: wrap;
}

.tags span {
  display: flex;
  margin-left: 10px;
  padding: 8px 12px;
  background-color: blue;
  color: #fff;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.tags span.selected {
  background-color: pink;
}

.wormie {
  display: flex;
  justify-content: flex-end;
  background-color: red;
}

